Create feedback #2 form that is not associated with an intern stipend
Create a new internship feedback form to collect information from
interns and mentors.

This second feedback is not associated with an internship stipend. In
the past, Outreachy interns were paid three payments (initial, midpoint,
and final). We collected feedback that also authorized those payments.

Now Outreachy interns are paid twice during the internship. We collect
feedback four times during the internship, with feedback #2 and
feedback #4 not being associated with an internship stipend payment.

Update feedback #2 form to be in-line with the yes/no questions we asked
in feedback #1. Make sure the feedback forms are in line with the week 5
and week 6 expectations we communicate to mentors.

Update tests to use the new fields for the intern and mentor feedback #2
forms.

Move older feedback models (MidpointMentorFeedback and
MidpointInternFeedback) to the end of home/models.py. Add a comment that
they are deprecated, and point to the new models (Feedback2FromMentor
and Feedback2FromIntern).

Unrelated small improvement to the staff view of the feedback: add a
link to the intern's blog, if they recorded it on the Outreachy website.

--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -47,7 +47,7 @@
 		{% if internship.is_initial_feedback_on_mentor_open %}
 			<p><a href="{% url 'initial-intern-feedback' %}"><button type="button" class="btn btn-info">Submit Feedback #1</button></a></p>
 		{% endif %}
-		{% if internship.is_midpoint_feedback_on_mentor_open %}
+		{% if internship.is_feedback_2_form_open_to_intern %}
 			<p><a href="{% url 'midpoint-intern-feedback' %}"><button type="button" class="btn btn-info">Submit Feedback #2</button></a></p>
 		{% endif %}
 		{% if internship.is_final_feedback_on_mentor_open %}
@@ -67,16 +67,16 @@
 			{% if internship.feedback1frommentor.organizer_payment_approved %}
 				<li>The Outreachy organizers have requested that the Software Freedom Conservancy pay your initial stipend.</li>
 			{% endif %}
-			{% if internship.midpointinternfeedback %}
+			{% if internship.feedback2fromintern %}
 				<li>You submitted feedback #2.</li>
 			{% endif %}
-			{% if internship.midpointmentorfeedback %}
-				<li>Your mentor submitted feedback #2 on {{ internship.midpointmentorfeedback.find_version_mentor_edited.revision.date_created }}</li>
+			{% if internship.feedback2frommentor %}
+				<li>Your mentor submitted feedback #2 on {{ internship.feedback2frommentor.find_version_mentor_edited.revision.date_created }}</li>
 			{% endif %}
-			{% if not internship.midpointinternfeedback and not internship.midpointmentorfeedback %}
+			{% if not internship.feedback2fromintern and not internship.feedback2frommentor %}
 				<li>Neither you nor your mentor have submitted feedback #2.</li>
 			{% endif %}
-			{% if internship.midpointmentorfeedback.organizer_payment_approved %}
+			{% if internship.feedback2frommentor.organizer_payment_approved %}
 				<li>The Outreachy organizers have reviewed feedback #2. Your internship is in good standing.</li>
 			{% endif %}
 			{% if internship.finalinternfeedback %}
