--- a/home/templates/home/dashboard/staff_intern_progress.html
+++ b/home/templates/home/dashboard/staff_intern_progress.html
@@ -3,8 +3,8 @@
 <h2>Intern Progress</h2>
 <p>Standard mentor feedback dates:
 <ul>
-	<li><p>{{ current_round.initialfeedback }} - Initial feedback is due. <a href="{% url 'initial-feedback-summary' round_slug=current_round.slug %}"><button class="btn btn-secondary">View Initial Feedback</button></a> <a href="{% url 'initial-feedback-export' round_slug=current_round.slug %}"><button class="btn btn-success">Export Initial Feedback</button></a></p></li>
-	<li><p>{{ current_round.midfeedback }} - Mid-point feedback is due. <a href="{% url 'midpoint-feedback-summary' round_slug=current_round.slug %}"><button class="btn btn-secondary">View Midpoint Feedback</button></a> <a href="{% url 'midpoint-feedback-export' round_slug=current_round.slug %}"><button class="btn btn-success">Export Midpoint Feedback</button></a></p></li>
+	<li><p>{{ current_round.initialfeedback }} - Feedback #1 is due. <a href="{% url 'initial-feedback-summary' round_slug=current_round.slug %}"><button class="btn btn-secondary">View Feedback #1</button></a> <a href="{% url 'initial-feedback-export' round_slug=current_round.slug %}"><button class="btn btn-success">Export Feedback #1</button></a></p></li>
+	<li><p>{{ current_round.midfeedback }} - Feedback #2 is due. <a href="{% url 'midpoint-feedback-summary' round_slug=current_round.slug %}"><button class="btn btn-secondary">View Feedback #2</button></a></p></li>
 	<li><p>{{ current_round.finalfeedback }} - Final feedback is due. <a href="{% url 'final-feedback-summary' round_slug=current_round.slug %}"><button class="btn btn-secondary">View Final Feedback</button></a> <a href="{% url 'final-feedback-export' round_slug=current_round.slug %}"><button class="btn btn-success">Export Final Feedback</button></a></p></li>
 </ul>
 {% with interns=current_round.get_approved_intern_selections %}
@@ -30,7 +30,7 @@
 					{% include 'home/snippet/intern-feedback-status.html' with intern_status=intern.get_intern_initial_feedback_status %}
 				</td>
 				<td>
-					{% include 'home/snippet/mentor-feedback-status.html' with mentor_status=intern.get_mentor_midpoint_feedback_status extension_date=intern.midpointmentorfeedback.extension_date %}
+					{% include 'home/snippet/mentor-feedback-status.html' with mentor_status=intern.get_mentor_midpoint_feedback_status extension_date=intern.feedback2frommentor.extension_date %}
 				</td>
 				<td>
 					{% include 'home/snippet/intern-feedback-status.html' with intern_status=intern.get_intern_midpoint_feedback_status %}
