--- a/home/templates/home/feedback1frommentor_form.html
+++ b/home/templates/home/feedback1frommentor_form.html
@@ -6,7 +6,7 @@ Initial mentor feedback
 {% endblock %}
 
 {% block content %}
-<h1>Initial feedback on {{ initialmentorfeedbackv2.intern_selection.applicant.applicant.public_name }}</h1>
+<h1>Initial feedback on {{ feedback1frommentor.intern_selection.applicant.applicant.public_name }}</h1>
 
 <p>Outreachy organizers collect intern feedback from mentors three times during the Outreachy internship.</p>
 
@@ -37,7 +37,7 @@ Initial mentor feedback
     </div>
     <div class="card-body">
         <p class="card-text">
-	<b>{{ initialmentorfeedbackv2.intern_selection.applicant.applicant.public_name }}</b> is the intern you are giving feedback on.
+	<b>{{ feedback1frommentor.intern_selection.applicant.applicant.public_name }}</b> is the intern you are giving feedback on.
 	If you are mentoring multiple interns, please make sure you're filling out the right initial feedback form.
         </p>
     </div>
@@ -68,7 +68,7 @@ Initial mentor feedback
 		<h2>6. Payments, extensions, or terminations</h2>
 		<h3>Internship Schedule</h3>
 
-		{% with intern_selection=initialmentorfeedbackv2.intern_selection %}
+		{% with intern_selection=feedback1frommentor.intern_selection %}
 			{% include 'home/snippet/internship_dates_table.html' %}
 
 			{% include 'home/snippet/internship_extensions_instructions.html' %}
@@ -127,7 +127,7 @@ Initial mentor feedback
     </div>
     <div class="card-body">
         <p class="card-text">
-	<b>{{ initialmentorfeedbackv2.intern_selection.applicant.applicant.public_name }}</b> is the intern you are giving feedback on.
+	<b>{{ feedback1frommentor.intern_selection.applicant.applicant.public_name }}</b> is the intern you are giving feedback on.
 	If you are mentoring multiple interns, please make sure you're filling out the right initial feedback form.
         </p>
     </div>
