Move internship week 5 chat about conferences into Internship Guide
Expand on the topics we might talk about, based on past chats.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -25,7 +25,8 @@ Internship Guide | Outreachy Documentation
 	<li><a href='#blogging-faq'>Blogging FAQ</a></li>
 	<li><a href='#chats'>Chats with interns, mentors, and alums</a>
 		<ul>
-			<li><a href='#week-1-chat'>Week 1 chat: Tips for remote work</a>
+			<li><a href='#week-1-chat'>Week 1 chat: Tips for remote work</a></li>
+			<li><a href='#week-5-chat'>Week 5 chat: Conferences</a></li>
 		</ul>
 	</li>
 </ol>
@@ -258,9 +259,9 @@ Internship Guide | Outreachy Documentation
 		<table class="table">
 			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Tips for remote work</td></tr>
 			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
-			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Share why you're passionate about your project or community</td></tr>
+			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Open source conferences (Alums invited!)</td></tr>
 			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
-			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>(Alums invited!) Advancing your career</td></tr>
+			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>Advancing your career (Alums invited!)</td></tr>
 			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Networking skills</td></tr>
 			<tr><th>{{ current_round.week_fourteen_chat_text_date }} UTC</th><td>Internship wrap up chat</td></tr>
 		</table>
@@ -270,11 +271,11 @@ Internship Guide | Outreachy Documentation
 {% if intern_round %}
 	{% with current_round=intern_round %}
 		<table class="table">
-			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Introduction chat - come get your questions answered!</td></tr>
+			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Tips for remote work</td></tr>
 			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
-			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Share why you're passionate about your project or community</td></tr>
+			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Open source conferences (Alums invited!)</td></tr>
 			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
-			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>(Alums invited!) Advancing your career</td></tr>
+			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>Advancing your career (Alums invited!)</td></tr>
 			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Networking skills</td></tr>
 			<tr><th>{{ current_round.week_fourteen_chat_text_date }} UTC</th><td>Internship wrap up chat</td></tr>
 		</table>
@@ -300,6 +301,27 @@ Internship Guide | Outreachy Documentation
 	<li>setting up your work space and work schedule</li>
 	<li>work-life balance</li>
 </ul>
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<a href="#week-5-chat"><h3 id="week-5-chat">Week 5 chat: Open source conferences</h3></a>
+
+<p>We will be discussing open source conferences. Conferences and events are a big part of free software and open source culture!</p>
+
+<p>If you haven't been to an open source conference before, come to our chat to learn more. If you have been to an open source conference before, come to our chat to share your experiences and tips.</p>
+
+<p>Topics for this conversation may include:</p>
+<ul>
+	<li>what you can get out of a conference</li>
+	<li>conference vocabulary and jargon</li>
+	<li>different types of event formats</li>
+	<li>funds to cover conference cost and travel</li>
+	<li>ways to network at conferences: exhibitor booths, hackathons/sprints, "birds of a feather" sessions, "hallway track"</li>
+	<li>ways to speak at conferences: lightning talks, short talks, tutorials, the "call for proposals/speakers" process, and new speaker coaching</li>
+</ul>
+
+<p>Anyone who has been to an open source conference is welcome to share their tips for getting the most out of conferences. Anyone is welcome to share information about open source conferences they know about.</p>
+
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 {% endblock %}
